# FreeGLUT

freeglut/freeglut/: Makefile.am  configure.ac
freeglut/freeglut/m4/: ax_gles_switch.m4  ax_win32_switch.m4
freeglut/freeglut/src/mswin/: fg_main_mswin.c
